--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pycparser==2.21
 PyGetWindow==0.0.9
 PyMsgBox==1.0.9
 pyperclip==1.8.2
+pypreprocessor @ git+https://github.com/Epikem/pypreprocessor@2058f3a99cc635b9e18e8586541249d7d676050b
 PyRect==0.2.0
 PyScreeze==0.1.28
 PySocks==1.7.1
