--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.17.3
 async-generator==1.10
 attrs==22.2.0
 beautifulsoup4==4.11.2
@@ -12,11 +13,13 @@ idna==3.4
 MouseInfo==0.1.3
 outcome==1.2.0
 packaging==23.0
+pefile==2023.2.7
 pycparser==2.21
 PyGetWindow==0.0.9
+pyinstaller==5.9.0
+pyinstaller-hooks-contrib==2023.0
 PyMsgBox==1.0.9
 pyperclip==1.8.2
-pypreprocessor @ git+https://github.com/Epikem/pypreprocessor@2058f3a99cc635b9e18e8586541249d7d676050b
 PyQt5==5.15.9
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.11.1
@@ -25,6 +28,7 @@ PyScreeze==0.1.28
 PySocks==1.7.1
 python-dotenv==1.0.0
 pytweening==1.0.4
+pywin32-ctypes==0.2.0
 requests==2.28.2
 selenium==4.8.2
 sniffio==1.3.0
